objects/PricebookEntry/fields/GP__c.field-meta.xml
<CustomField>
    <fullName>GP__c</fullName>
    <formula>0.0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GP%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>